package hva.core.enumf;

public enum LeafState {
    WITHLEAVES,
    WITHOUTLEAVES,
    FALLINGLEAVES,
    GENERATELEAVES
}
